--- a/index.css
+++ b/index.css
@@ -22,6 +22,8 @@ header {
     padding: 1.25rem;
     margin: .25rem;
     text-align: center;
+    display: flex;
+    flex-direction: row;
 }
 
 /*General Styles*/
