--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body{
     padding: 1.25rem;
     width: 100%;
     height: 100%;
+    font-weight: normal;
+    font-size: 1.1rem;
     font-family: "Times New Roman", Times, Arial, sans-serif;
     background-color: #f4f4f4;
     display: flex;
@@ -12,24 +14,30 @@ body{
     justify-content: center;
     overflow-x: hidden;
     overflow-y: auto;
+    background: linear-gradient(to bottom , #f8f8f8, rgb(182, 232, 232));
 }
 
 
 /* Header Styles */
-header {
-    width: 90.625rem;
+.header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    max-width: 100vw;
     color: white;
-    padding: 1.25rem;
-    margin: .25rem;
+    padding: 0;
+    margin: 0;
     text-align: center;
     display: flex;
     flex-direction: row;
+    z-index: 1000;
 }
 
 /*General Styles*/
 h1, h2, h3, h4, h5, h6 {
     color: #333;
-    font-size: bold;
+    font-size:bold;
 }
 
 p {
@@ -53,7 +61,7 @@ p {
     flex-direction: row;
     justify-content: space-evenly;
     gap: 1.25rem;  
-    background-color: aqua;
+    background-color: rgb(184, 189, 189);
     border-radius: 0.3125rem;
 }
 
@@ -62,7 +70,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 1.25rem;
+    gap: .25rem;
     padding: 2rem;
 }
 
@@ -85,6 +93,14 @@ p {
 }
 
 /*HOW IT WORKS SECTION STYLES*/
+.how-it-works{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: .25rem;
+    padding: 2rem;
+}
+
 .how-it-works-steps {
     display: flex;
     flex-direction: row;
@@ -121,9 +137,38 @@ p {
     border-radius: 0.3125rem;
 }
 
+/* BUTTON STYLES*/
+button {
+    display: inline-block;
+    padding: 0.625rem 1.25rem;
+    background-color: #007bff;
+    color: white;
+    font-size: 1rem;
+    font-weight: bolder;
+    width: 10rem;
+    text-decoration: none;
+    border-radius: 0.3125rem;
+    transition: background-color 0.3s ease;
+}
+
 /*FOOTER STYLES*/
 .footer {
     padding: 2rem;
     color: white;
     text-align: center;
+    text-decoration: none;
 }
+.footer a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.footer li {
+    list-style: none;
+    margin: 0.5rem 0;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+/* MEDIA QUERIES */
